<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_novo_contato"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ifrn.tads.ddm.agendabd.NovoContato">

    <TextView
        android:text="@string/tituloForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <TextView
        android:text="@string/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextNome" />

    <TextView
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail" />

    <TextView
        android:text="@string/telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextFone" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/btnInsereBanco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="insereContato"
            android:layout_weight="1" />

        <Button
            android:text="@string/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="voltar"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
